# crypto-zkp-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: CryptoZKPConfig.cmake.in
examples/: CMakeLists.txt  zkp-test.cpp
proto/: zkp.proto
src/: CMakeLists.txt
src/crypto-zkp/: dln_proof.cpp  dln_proof.h  dlog_elgamal_com_proof.cpp  dlog_proof.cpp  dlog_proof.h  dlog_proof_v2.cpp  heg_proof.cpp  heg_proof.h  no_small_factor_proof.cpp  no_small_factor_proof.h  pail_proof.cpp  pail_proof.h  range_proof.cpp  range_proof.h  zkp.h  zkp.pb.cc  zkp.pb.h
src/crypto-zkp/pail/: pail_aff_group_ele_range_proof_v1.cpp  pail_aff_group_ele_range_proof_v2.cpp  pail_aff_range_proof.cpp  pail_blum_modulus_proof.cpp  pail_dec_modulo_proof.cpp  pail_enc_elgamal_com_range_proof.cpp  pail_enc_group_ele_range_proof.cpp  pail_enc_mul_proof.cpp  pail_enc_range_proof_v1.cpp  pail_enc_range_proof_v2.cpp  pail_mul_group_ele_range_proof.cpp  pail_n_proof.cpp
src/crypto-zkp/proto_gen/3_14/: zkp.pb.h
src/crypto-zkp/proto_gen/3_20/: zkp.pb.cc  zkp.pb.h
test/: CMakeLists.txt  no_small_factor_proof_test.cpp  pail_N_test.cpp  pail_blum_modulus_proof_test.cpp  zkp-test.cpp
